fix(navBar): remove flickering/bumping for navbar

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -77,6 +77,7 @@ $button-font-size:                    16px !default;
 $button-height:                       42px !default;
 $button-padding:                      12px !default;
 $button-icon-size:                    24px !default;
+$button-icon-active-opacity:          0.3 !default;
 
 $button-large-font-size:              20px !default;
 $button-large-height:                 54px !default;
